--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -48,7 +48,7 @@ background-position: top right 32px;
 .wbw-social {
 	width: 100%;
 	min-height: 250px;
-	background: #b4a269ff;
+	background: #b4a269;
 }
 .new-release {
 	width: 100%;
@@ -116,7 +116,7 @@ background-position: top right 32px;
 	margin-top: 111px;
 	min-height: 330px;
 	padding-top: 7rem;
-	color: #b4a269ff;
+	color: #b4a269;
 }
 .beer-tags,
 .cider-tags {
@@ -150,7 +150,7 @@ background-position: top right 32px;
 	font-size: 12px;
 }
 .fa-footer {
-	color: #b4a269ff !important;
+	color: #b4a269 !important;
 	&:hover {
 		color: #ccc !important;
 	} 
@@ -171,7 +171,7 @@ background-position: top right 32px;
 	border-top: 4px solid #1d547e; 
 }
 .about-wbw {
-	background: #b4a269ff;
+	background: #b4a269;
 	width: 100%;
 	min-height: 200px;
 }
